fix: adjust container width for better responsiveness on small screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -70,6 +70,9 @@ main {
 main .container {
     width: 60%;
     padding-top: 4rem;
+    @media (max-width: 700px) {
+        width: 80%;
+    }
 
 }
 
@@ -259,7 +262,7 @@ footer nav a:hover {
     flex-direction: row;
     text-align: justify;
 
-    @media (max-width: 425px) {
+    @media (max-width: 450px) {
         flex-direction: column;
     }
 }
